compiler/testData/diagnostics/tests/CompareToWithErrorType.fir.kt
fun test() {
  if (<!UNRESOLVED_REFERENCE!>x<!> > 0) {

  }
}
